resilient/tests/it/snapshots/it__diagnostics_snapshots__runtime_division_by_zero@runtime_division_by_zero.snap
---
source: tests/diagnostics_snapshots.rs
description: "fn main(int _d) { return 10 / 0; } main(0);\n"
expression: output
---
Error: <tmp>.rs:1:40: Runtime error: Division by zero
Runtime error: Division by zero
   fn main(int _d) { return 10 / 0; } main(0);
                                          ^
